discussion/kv_engine/153272/153272_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: error: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

The trickiest part here is getting the logger to accept both calls
with format strings and variable args (like the example above), and
plain, single argument fixed string - e.g.

    EP_LOG_DEBUG("Something interesting happened");

This is because "Something interesting happened" isn't considered to
be a valid formatting string by fmtlib, and hence will trigger a
compile-time error if you attempt to verify it as such. Therefore it
is necessary to use the preprocessor to pass through such messages
without applying the FMT_STRING() macro to them.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-27 13:52:36.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 14:24:41.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9222/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9222/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9222/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36137/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\configuration.cc(82): error C2326: "ValueChangedValidator::validateBool::<lambda_c942adeb132d9f4954a61f1308b69019>::()::FMT_COMPILE_STRING::operator fmt::v7::basic_string_view<char>(void) const": function cannot access "error" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36137/ )

Compile error at    fmt/format.h:2873:27:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36137/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10927/ : FAILURE

Compile error at [2021-05-27T14:10:05.088Z] ../kv_engine/engines/ep/src/configuration.cc:82:18:
error: use of local variable with automatic storage from containing function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10783/ : FAILURE

Compile error at [2021-05-27T14:08:05.309Z] ../kv_engine/engines/ep/src/configuration.cc:82:18:
error: use of local variable with automatic storage from containing function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10783/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30864/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7802/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11187/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18750/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9851/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
